<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.logiapplication.carrier.ui.profile.ProfileFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/carrier_fragment_profile" />

    <fragment
        android:id="@+id/nav_time"
        android:name="com.example.logiapplication.carrier.ui.time.TimeFragment"
        android:label="@string/menu_tiempo"
        tools:layout="@layout/carrier_fragment_time" />


    <fragment
        android:id="@+id/nav_syncup"
        android:name="com.example.logiapplication.carrier.ui.syncup.SyncUpFragment"
        android:label="@string/menu_sincronizar"
        tools:layout="@layout/carrier_fragment_syncup" />
</navigation>