<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="212dp"
        android:layout_height="155dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118"
        app:srcCompat="@drawable/logi_app_logo" />

    <TextView
        android:id="@+id/Contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contrasena"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editPassword"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <EditText
        android:id="@+id/editUsuario"
        android:layout_width="187dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/hint_usuario"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="187dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_contrasena"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="97dp"
        android:layout_height="39dp"
        android:layout_marginTop="172dp"
        android:backgroundTint="@color/other_gray"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Ingresar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:iconTint="@color/other_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IniciarSesion"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/olvideContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-medium"
        android:onClick="forget"
        android:text="@string/Olvide_contrasena"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar"
        app:layout_constraintVertical_bias="0.148" />


    <TextView
        android:id="@+id/IniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/gray"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <TextView
        android:id="@+id/Usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/Usuario"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Contrasena"
        app:layout_constraintEnd_toStartOf="@+id/editUsuario"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />


</androidx.constraintlayout.widget.ConstraintLayout>